--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,9 @@
     </style>
   </head>
   <body>
-    <button id="play-pause"></button>
+    <div><button id="play-pause"></button>
+      <button id="reset-btn">Reset</button></div>
+    
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
