--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,8 @@
   </head>
   <body>
     <div><button id="play-pause"></button>
-      <button id="reset-btn">Reset</button></div>
+      <button id="reset-btn">Reset</button>
+    </div>
     
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
