--- a/www/index.html
+++ b/www/index.html
@@ -15,11 +15,16 @@
         align-items: center;
         justify-content: center;
       }
+      #fps {
+        white-space: pre;
+        font-family: monospace;
+      }
     </style>
   </head>
   <body>
     <div><button id="play-pause"></button>
       <button id="reset-btn">Reset</button>
+      <div id="fps"></div>
     </div>
     
     <canvas id="game-of-life-canvas"></canvas>
